[package]
name = "flint-steel"
version = "1.0.0"
edition = "2024"
description = "Flint testing framework integration for SteelMC"

[profile.flint]
inherits = "dev"
debug = true

[dependencies]
# Internal crates
steel-core = { git = "ssh://git@github.com/Steel-Foundation/SteelMC.git" }
steel-protocol = { git = "ssh://git@github.com/Steel-Foundation/SteelMC.git" }
steel-registry = { git = "ssh://git@github.com/Steel-Foundation/SteelMC.git" }
steel-utils = { git = "ssh://git@github.com/Steel-Foundation/SteelMC.git" }

# UUID
uuid = { version = "1.20", features = ["serde", "v4"] }

# Text components for disconnect messages
text_components = { git = "https://github.com/Steel-Foundation/TextComponents.git", features = [
    "custom",
    "nbt",
    "serde",
] }

# Flint testing framework
flint-core = { git = "https://github.com/FlintTestMC/flint-core.git" }
#flint-core ={ path = "../../flint/flint-core"}

# Async
tokio = { version = "1.49", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "io-std",
    "fs",
    "io-util",
    "time",
    "signal",
] }
futures = "0.3.31"

# Logging
tracing = "0.1"
# Because of steel
cipher = "=0.5.0-rc.8"

# Hash maps
rustc-hash = "2.1.1"

# Serialization (for flint-core compatibility)
dotenvy = "0.15.7"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
single_call_fn = "allow"
multiple_inherent_impl = "allow"
shadow_unrelated = "allow"
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
cargo_common_metadata = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
absolute_paths = "warn"
missing_const_for_fn = "warn"
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
unwrap_used = { level = "warn", priority = -3 }

# Uncomment for local development with a local SteelMC checkout:
[patch."ssh://git@github.com/Steel-Foundation/SteelMC.git"]
steel-core = { path = "../SteelMC/steel-core" }
steel-protocol = { path = "../SteelMC/steel-protocol" }
steel-registry = { path = "../SteelMC/steel-registry" }
steel-utils = { path = "../SteelMC/steel-utils" }
